--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,46 @@
 {
-    "name": "imdhemy/expo-notifications",
-    "type": "library",
-    "description": "PHP expo push notifications client",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "imdhemy",
-            "email": "imdhemy@gmail.com"
-        }
-    ],
-    "keywords": [
-        "php",
-        "expo",
-        "push_notifications",
-        "notifications"
-    ],
-    "autoload": {
-        "psr-4": {
-            "Imdhemy\\Expo\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Imdhemy\\Expo\\Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "guzzlehttp/guzzle": "^7.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^2.18",
-        "vimeo/psalm": "^4.4"
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
-        "psalm": "vendor/bin/psalm"
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "prefer-stable": true
+  "name": "imdhemy/expo-notifications",
+  "type": "library",
+  "description": "PHP expo push notifications client",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "imdhemy",
+      "email": "imdhemy@gmail.com"
+    }
+  ],
+  "keywords": [
+    "php",
+    "expo",
+    "push_notifications",
+    "notifications"
+  ],
+  "autoload": {
+    "psr-4": {
+      "Imdhemy\\Expo\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Imdhemy\\Expo\\Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "guzzlehttp/guzzle": ">=7.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "friendsofphp/php-cs-fixer": "^2.18",
+    "vimeo/psalm": "^4.4"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit",
+    "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+    "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+    "psalm": "vendor/bin/psalm"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "prefer-stable": true
 }
