--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     }
   },
   "require": {
-    "guzzlehttp/guzzle": ">=7.2"
+    "guzzlehttp/guzzle": ">=7.2",
+    "illuminate/collections": "^8.25"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
