--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,6 @@
   },
   "require": {
     "doctrine/collections": "^1.6",
-    "fakerphp/faker": "^1.13",
     "guzzlehttp/guzzle": ">=7.2",
     "ext-json": "*"
   },
@@ -35,7 +34,8 @@
     "friendsofphp/php-cs-fixer": "^2.18",
     "phpunit/phpunit": "^9.5",
     "symfony/var-dumper": "^5.2",
-    "vimeo/psalm": "^4.4"
+    "vimeo/psalm": "^4.4",
+    "fakerphp/faker": "^1.13"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
